Remove unused CSVReader class and update Deck class to improve card drawing logic